[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://interactables/money/CollectableCoin.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnemySpawnArea.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 576, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 360, 32 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -56, -56, 0, 0, 0, 0, 1080, -56, 0, 0, 0, 0, 1080, 656, 0, 0, 0, 0, -56, 656, 0, 0, 0, 0, -56, -56 )
}

[node name="World" type="Node"]

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 512, 256 )

[node name="CollectableCoin" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 688, 424 )

[node name="CollectableCoin2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 320, 296 )

[node name="CollectableCoin3" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 536, 176 )

[node name="CollectableCoin4" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 744, 72 )

[node name="CollectableCoin5" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 248, 64 )

[node name="CollectableCoin6" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 56, 184 )

[node name="CollectableCoin7" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 128, 536 )

[node name="CollectableCoin8" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 392, 480 )

[node name="CollectableCoin9" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 960, 520 )

[node name="CollectableCoin10" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 856, 252 )

[node name="CollectableCoin11" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 888, 236 )

[node name="CollectableCoin12" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 832, 224 )

[node name="CollectableCoin13" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 824, 280 )

[node name="CollectableCoin14" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 880, 296 )

[node name="WorldBounds" type="Node" parent="."]

[node name="Top" type="StaticBody2D" parent="WorldBounds"]
position = Vector2( 512, -24 )
rotation = -3.14159
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/Top"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="WorldBounds/Top"]
show_behind_parent = true
margin_left = -576.0
margin_top = -32.0
margin_right = 576.0
margin_bottom = 32.0
color = Color( 0.14902, 0.172549, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="StaticBody2D" parent="WorldBounds"]
position = Vector2( 512, 624 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/Bottom"]
shape = SubResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="WorldBounds/Bottom"]
show_behind_parent = true
margin_left = -576.0
margin_top = -32.0
margin_right = 576.0
margin_bottom = 32.0
color = Color( 0.14902, 0.172549, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="StaticBody2D" parent="WorldBounds"]
position = Vector2( -24, 296 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/Left"]
shape = SubResource( 2 )

[node name="ColorRect3" type="ColorRect" parent="WorldBounds/Left"]
show_behind_parent = true
margin_left = -361.0
margin_top = -32.0
margin_right = 360.0
margin_bottom = 32.0
color = Color( 0.14902, 0.172549, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="StaticBody2D" parent="WorldBounds"]
position = Vector2( 1048, 304 )
rotation = -1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/Right"]
shape = SubResource( 2 )

[node name="ColorRect4" type="ColorRect" parent="WorldBounds/Right"]
show_behind_parent = true
margin_left = -360.0
margin_top = -32.0
margin_right = 360.0
margin_bottom = 32.0
color = Color( 0.14902, 0.172549, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemySpawnArea" type="Path2D" parent="."]
curve = SubResource( 3 )
script = ExtResource( 4 )

[node name="EnemySpawnSpot" type="PathFollow2D" parent="EnemySpawnArea"]
position = Vector2( -56, -56 )
rotation = 9.75007e-07

[node name="SpawnTimer" type="Timer" parent="EnemySpawnArea"]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="EnemySpawnArea/SpawnTimer" to="EnemySpawnArea" method="_on_SpawnTimer_timeout"]
